added gitignore file

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.HTML linguist-language=Javascript
-*.CSS linguist-language=Javascript
+*.html linguist-language=Javascript
+*.css linguist-language=Javascript
